apps/iot/node-red/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: node-red
          image: nodered/node-red:4.1.6
          ports:
            - containerPort: 1880
          volumeMounts:
            - name: node-red-data-storage
              mountPath: /data
          securityContext:
            runAsUser: 1000
      volumes:
        - name: node-red-data-storage
          persistentVolumeClaim:
            claimName: node-red-data
      securityContext:
        fsGroup: 1000
