apps/iot/node-red/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red
  namespace: iot
spec:
  type: ClusterIP
  selector:
    app: node-red
  ports:
  - name: http
    port: 1880
    targetPort: 1880
