apps/iot/node-red/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: node-red
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-ca
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-com
  hostnames:
    - node-red.travisprosser.ca
    - node-red.travisprosser.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: node-red
          port: 1880
