apps/iot/node-red/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red
spec:
  ingressClassName: traefik
  rules:
    - host: node-red.home-server-k3s.lan
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: node-red
                port:
                  number: 1880
